# XRM_Benchmark

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  room_data.py  room_matcher.py
data/: convert.py  get_room.sh  sample_20250826.json  xrm_sample_1600_datapoints_v2.json
