[project]
name = "xrm_benchmark"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "christopher", email = "christopher.hu@traveloka.com"},
]
dependencies = ["requests>=2.32.5"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
