[project]
name = "xrm_benchmark"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "christopher", email = "christopher.hu@traveloka.com"},
]
dependencies = ["google>=3.0.0", "google-genai>=1.32.0", "pandas>=2.3.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dependencies]
numpy = "1.26.0"  # 比 2.0 稳定
pandas = "*"
